flipCoin/app.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Kanit", sans-serif;
}

body {
    height: 100px;
    background-color: #404A65;
}

.author-info {
    font-size: 14px;
    text-align: center;
    margin-top: 16px;
    color: rgb(95, 106, 125);
}

.author-info a {
    text-decoration: none;
}

#heading {
    text-shadow: 2px 2px 0px #35383f;
    -webkit-text-stroke-width: 5px;
    -webkit-text-stroke-color: #35383f;
}

.custom-btn {
    background-color: #1F6FB0;
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    border: 1px solid #1b6faa;
    border-radius: 6px;
    padding: 10px 40px;
    transition: all 0.15s ease;
    font-size: larger;
    box-shadow: 0px 4px 0px 0px #23649b;
}

.text-stroke {
    color: white;
    font-weight: 900;
    font-size: 3rem;
    text-shadow:
        -2px -2px 0 #35383F,
        2px -2px 0 #35383F,
        -2px 2px 0 #35383F,
        2px 2px 0 #35383F,
        0px 0px 3px #35383F;
}

.custom-btn:hover {
    background-color: #1678c2;
}

/* animation class to setup animation area and show initial coin image*/
.animation {
    width: 160px;
    height: 160px;
    position: fixed;
    animation-name: graphic;
    left: 43%;
    animation-duration: 0.4s;
    animation-iteration-count: 0;
    background-image: url("resources/heads.svg");
    background-size: auto;
    background-repeat: no-repeat;
    transition: ease-in-out;
    animation-fill-mode: forwards;
}


/* Logic to show flipping coin */
@keyframes graphic {
    0% {
        background-image: url("resources/heads.svg");
        transform: scale(1, 1)
    }

    25% {
        background-image: url("resources/heads.svg");
        transform: scale(1, 0.03)
    }

    26% {
        background-image: url("resources/tails.svg");
        transform: scale(1, 0.07)
    }

    50% {
        background-image: url("resources/tails.svg");
        transform: scale(1, 1)
    }

    75% {
        background-image: url("resources/tails.svg");
        transform: scale(1, 0.03)
    }

    76% {
        background-image: url("resources/heads.svg");
        transform: scale(1, 0.07)
    }

    100% {
        background-image: url("resources/heads.svg");
        transform: scale(1, 1)
    }
}

.aniSh {
    width: 100px;
    height: 100px;
    position: fixed;
    animation-name: graphicSh;
    left: 45.5%;
    animation-duration: 0.4s;
    animation-iteration-count: 0;
    background-image: url("resources/Shado.png");
    background-size: auto;
    background-repeat: no-repeat;
    transition: ease-in-out;
    animation-fill-mode: forwards;

}

@keyframes graphicSh {
    0% {
        background-image: url("resources/Shado.png");
        transform: scale(1.2, 0.5)
    }

    25% {
        background-image: url("resources/Shado.png");
        transform: scale(1.11, 1)
    }

    26% {
        background-image: url("resources/Shado.png");
        transform: scale(1.11, 1)
    }

    50% {
        background-image: url("resources/Shado.png");
        transform: scale(1.2, 0.5)
    }

    75% {
        background-image: url("resources/Shado.png");
        transform: scale(1.11, 1)
    }

    76% {
        background-image: url("resources/Shado.png");
        transform: scale(1.11, 1)
    }

    100% {
        background-image: url("resources/Shado.png");
        transform: scale(1.2, 0.5)
    }
}

